hphp/hack/test/typecheck/constraints/constraint_override_bad.php.legacy.exp
File "constraint_override_bad.php", line 9, characters 7-7:
Class C does not correctly implement all required members  (Typing[4110])
  File "constraint_override_bad.php", line 9, characters 17-17:
  Some members are incompatible with those declared in type B
Read the following to see why:
  File "constraint_override_bad.php", line 10, characters 19-21:
  Member foo has the wrong type
  File "constraint_override_bad.php", line 10, characters 23-23:
  This is a value of generic type T
  File "constraint_override_bad.php", line 10, characters 31-31:
  It is incompatible with an object of type B
